syntax = "proto3";

option java_package = "com.hongphat.common_service.proto";
package com.hongphat.common_service;
option java_multiple_files = true;

service CommonService {
  rpc getBookDetail(GetBookDetailRequest) returns (GetBookDetailResponse);
  rpc updateBookStatus(UpdateBookStatusRequest) returns (UpdateBookStatusResponse);
  rpc getEmployeeDetail(GetDetailEmployeeRequest) returns (GetDetailEmployeeResponse);
}

message GetBookDetailRequest {
  string bookId = 1;
}

message GetBookDetailResponse {
  string id = 1;
  string name = 2;
  string author = 3;
  bool isReady = 4;
}

message UpdateBookStatusRequest {
  string id = 1;
  bool isReady = 2;
}

message UpdateBookStatusResponse {
  bool success = 1;
}

message GetDetailEmployeeRequest {
  string employeeId = 1;
}

message GetDetailEmployeeResponse {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string kin = 4;
  bool isDisciplined = 5;
}